# CarfuelBackend

./: .env  .gitignore  Procfile  README.md  build.sh  build_files.sh  db.sqlite3  manage.py  mydatabase  pyproject.toml  render.yaml  requirements.txt  runtime.txt  sql_scripts.md  vercel.json
CarfuApp/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
CarfuApp/authentication/: Authentication.py
CarfuApp/exceptions/: Exception.py
CarfuApp/interfaces/: LoginInterface.py  OrderInterface.py  __init__.py
CarfuApp/migrations/: 0001_initial.py  0002_alter_authuser_options_alter_task_options_and_more.py  0002_alter_task_id_alter_taskactivity_id.py  0002_cars.py  0002_rename_car_id_cars_id_and_more.py  0003_alter_task_status_alter_taskactivity_status.py  0003_auto_20221022_0848.py  0003_delete_roles.py  0004_alter_authuser_gender.py  0004_auto_20221022_0855.py
CarfuApp/models/: __init__.py  models.py
CarfuApp/serializers/: AuthenticationSerializer.py  CarSerializer.py  OrderSerializer.py  TaskSerializer.py  __init__.py
CarfuApp/templates/: home.html
CarfuApp/utils/: Exception.py  GenericResponse.py  SMS.py  Security.py  __init__.py
CarfuelBackEnd/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/: staticfiles.json
staticfiles/keys/: privateKey.pem  publicKey.pem
