[tool.poetry]
name = "carfuelbackend"
version = "0.1.0"
description = "Carfuel Backend"
authors = ["Sebastian"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.11"
asgiref = "3.7.2"
certifi = "2023.7.22"
charset-normalizer = "3.2.0"
deprecated = "1.2.14"
dj-database-url = "2.1.0"
django-cors-headers = "4.2.0"
django-environ = "0.10.0"
django-rest-auth = "0.9.5"
djangorestframework = "3.14.0"
gunicorn = "22.0.0"
idna = "3.7"
packaging = "23.2"
pillow = "10.3.0"
psycopg-binary = "3.1.10"
psycopg2-binary = "2.9.7"
pytz = "2023.3.post1"
requests = "2.32.2"
six = "1.16.0"
sqlparse = "0.5.0"
typing-extensions = "4.7.1"
urllib3 = "1.26.18"
whitenoise = "6.5.0"
wrapt = "1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
